--- a/src/app/component/start-page/start-page.component.html
+++ b/src/app/component/start-page/start-page.component.html
@@ -30,7 +30,7 @@
       adipiscing elit.
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at arcu ut quam lacinia bibendum.
       Proin tempor mauris sem, ac blandit metus fringilla ac. Nam luctus arcu id libero dictum fermentum.
-      Curabitur euismod, urna quis imperdiet lacinia, lorem neque consequat leo, hendrerit ultricies quam dolor ac
+      Curabitur euismod, urna quis imperdiet lacinia, lorem neque consequat leo, hekindrerit ultricies quam dolor ac
       turpis.
       Vestibulum pharetra efficitur dolor, non luctus ipsum porttitor at.
       <br>
